@@ -5,4 +5,4 @@
 ############################################################################
 
 # Version
-ont.app.version=0.2.0.beta7
+ont.app.version=1.0.0.beta
